--- a/style.css
+++ b/style.css
@@ -20,3 +20,15 @@ h3
     background-color: #131720;
     padding: 10px;
 }
+
+.topnav a
+{
+    float: left;
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 1.2rem;
+    text-transform: uppercase;
+}
